base64 fixed in java7